classDiagram
direction TB
class Claim {
  <<abstract>>
  Long id
  LocalDate claimDate
  int requestAmount
  ClaimStatus status
  +submit()
}
class HealthInsuranceClaim {
  String hospitalName
  String diagnosisCode
  int receiptAmount
  ClaimComplexity complexity
  +attachDocument(File)
}
class CarAccidentReport {
  String accidentType
  String vehicleNumber
  boolean hasInjury
  int injuredCount
  +attachPhoto(File)
}
class ClaimAttachment {
  String filename
  String storedPath
}
class InsuranceContract
class BenefitPayment
class BenefitPaymentReview
Claim <|-- HealthInsuranceClaim
Claim <|-- CarAccidentReport
Claim --> InsuranceContract : 소속 계약
HealthInsuranceClaim "1" *-- "*" ClaimAttachment
CarAccidentReport "1" *-- "*" ClaimAttachment
BenefitPayment --> Claim : 지급 대상
BenefitPaymentReview --> Claim : 심사 대상
